<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fe93c3"
    android:orientation="vertical"
    android:gravity="center"


    tools:context=".SkinProblem">

    <TextView
        android:id="@+id/typeid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="29sp"
        android:textStyle="bold"
        android:textColor="#f5f8f8"
        android:text="@string/hair_or_skin"
    ></TextView>

    <CheckBox
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:id="@+id/acneid"
        android:text="@string/Acne"
        ></CheckBox>
    <CheckBox
        android:layout_marginRight="37dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:id="@+id/oilyid"
        android:text="@string/oily"
        ></CheckBox>

    <CheckBox
        android:id="@+id/scarsid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:text="@string/Scars"
        android:textSize="24sp"
        android:textStyle="bold"></CheckBox>

    <CheckBox
        android:id="@+id/pigmentationid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:text="@string/Pigmentation"
        android:textSize="24sp"
        android:textStyle="bold"></CheckBox>
    <TextView
        android:id="@+id/clickbuttongetsolution"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseButton"
        android:textStyle="bold"
        android:textSize="24sp"
        ></TextView>
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/solutionid"
        android:textAllCaps="false"

        android:text="Click here"
        android:textColor="#FFFFFF"
        android:textSize="20sp"

        android:layout_width="180dp"
        android:layout_height="60dp"
        android:background="#8a1a54"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />



</LinearLayout>